--- a/src/style.css
+++ b/src/style.css
@@ -317,13 +317,10 @@ button:not(:disabled),
 
 
 .container-xl {
-  --bs-gutter-x: 1.5rem;
-  --bs-gutter-y: 0;
   width: 100%;
-  padding-right: calc(var(--bs-gutter-x) * 0.5);
-  padding-left: calc(var(--bs-gutter-x) * 0.5);
-  margin-right: auto;
-  margin-left: auto;
+  padding-left: 16px;
+  padding-right: 16px;
+  height: 100vh !important;
 }
 @media (min-width: 1200px) {
   .container-xl {
@@ -332,7 +329,7 @@ button:not(:disabled),
 }
 @media (min-width: 1400px) {
    .container-xl {
-    max-width: 1320px;
+    max-width: 100%;
   }
 }
 .row {
@@ -637,6 +634,7 @@ button:not(:disabled),
 .py-2 {
   padding-top: 0.5rem !important;
   padding-bottom: 0.5rem !important;
+  height: 100vh;
 }
 
 .py-5 {
@@ -752,9 +750,9 @@ button:not(:disabled),
   }
 }
 .header {
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../img/header.jpg");
+  background-color: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
   /** TODO: Eliminar la sig linea **/
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../public/img/header.jpg");
+  background-color: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
   background-position: 50%;
   background-size: cover;
   position: relative;
@@ -775,3 +773,9 @@ button:not(:disabled),
     z-index: 10;
   }
 }
+
+.carrusel-header{
+  height: 90vh !important;
+}
+
+
