--- a/src/style.css
+++ b/src/style.css
@@ -85,16 +85,16 @@ body{
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #e99401;
-  --bs-secondary: #6c757d;
+  --bs-primary: #1C90A1;
+  --bs-secondary: #98C7C9;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
-  --bs-dark: #262626;
-  --bs-primary-rgb: 233, 148, 1;
-  --bs-secondary-rgb: 108, 117, 125;
+  --bs-dark: #1C90A1;
+  --bs-primary-rgb: 28, 144, 161;
+  --bs-secondary-rgb: 152, 199, 201;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
   --bs-warning-rgb: 255, 193, 7;
@@ -161,7 +161,8 @@ body {
   font-family: "Outfit", sans-serif;
   font-weight: 900;
   line-height: 1.2;
-  color: rgb(var(--v-theme-primary)) !important;
+  /*color: rgb(var(--v-theme-primary)) !important;*/
+  color: var(--bs-primary) !important;
 }
 
 h1, .h1 {
